erDiagram
    SOURCE_SYSTEMS ||--o{ SOURCE_LOADS : provides
    PIPELINE_RUNS ||--o{ SOURCE_LOADS : groups
    PIPELINE_RUNS ||--o{ CANDIDATE_RISK_EVALUATIONS : evaluates

    SUPPLIERS ||--o{ PURCHASE_ORDER_VERSIONS : supplies
    PURCHASE_ORDERS ||--o{ PURCHASE_ORDER_LINES : contains
    PURCHASE_ORDER_LINES ||--o{ DELIVERY_SCHEDULES : schedules
    PURCHASE_ORDER_LINES ||--o{ SUPPLIER_COMMITMENT_OBSERVATIONS : committed_on
    PURCHASE_ORDER_LINES ||--o{ RECEIPT_TRANSACTIONS : receives
    RECEIPT_TRANSACTIONS ||--o{ RECEIPT_ALLOCATIONS : allocates
    RECEIPT_TRANSACTIONS ||--o{ RECEIPT_TRANSACTIONS : corrects
    DELIVERY_SCHEDULES ||--o{ RECEIPT_ALLOCATIONS : schedule_bucket
    DELIVERY_SCHEDULES ||--o{ SUPPLIER_COMMITMENT_OBSERVATIONS : schedule_reference

    PRODUCTS ||--o{ PRODUCT_VERSIONS : versions
    PRODUCTS ||--o{ UOM_CONVERSIONS : converts
    SITES ||--o{ PURCHASE_ORDER_LINE_VERSIONS : receives
    SITES ||--o{ EXCEPTION_EPISODES : scopes

    PURCHASE_ORDER_LINES ||--o{ CANDIDATE_RISK_EVALUATIONS : assessed_by
    CANDIDATE_RISK_EVALUATIONS ||--o{ CANDIDATE_RISK_CONTRIBUTIONS : explains
    CANDIDATE_RISK_EVALUATIONS ||--o{ EXCEPTION_EPISODES : opens
    EXCEPTION_EPISODES ||--o{ CANDIDATE_RISK_EVALUATIONS : linked_candidates

    EXCEPTION_EPISODES ||--o{ EXCEPTION_EVENT_ENVELOPES : records
    EXCEPTION_EVENT_ENVELOPES ||--o| EXCEPTION_STATE_EVENTS : typed_as
    EXCEPTION_EPISODES ||--o{ APPROVAL_REQUESTS : requests
    APPROVAL_REQUESTS ||--o{ APPROVAL_DECISIONS : receives
    EXCEPTION_EPISODES ||--o{ SUPPRESSION_CONTROLS : suppresses
    EXCEPTION_EPISODES ||--o{ RESOLUTION_RECORDS : resolves
    EXCEPTION_EPISODES ||--o{ EPISODE_RELATIONSHIPS : relates_from
    EXCEPTION_EPISODES ||--o{ NOTIFICATION_EVENTS : future_audit

    USERS ||--o{ APPROVAL_REQUESTS : requests
    USERS ||--o{ APPROVAL_DECISIONS : approves
